[metadata]
name = pyglottolog
version = 3.11.0
author = Robert Forkel
author_email = robert_forkel@eva.mpg.de
description = python package for glottolog data curation
long_description = file: README.md
long_description_content_type = text/markdown
keywords = linguistics
license = Apache 2.0
license_files = LICENSE
url = https://github.com/glottolog/pyglottolog
project_urls =
    Bug Tracker = https://github.com/glottolog/pyglottolog/issues
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.7
install_requires =
    gitpython
    pybtex>=0.22
    attrs>=19.2
    clldutils>=3.7
    cldfcatalog
    csvw>=1.5.6
    purl
    pycldf>=1.6.4
    sqlalchemy>=1.4
    tqdm
    latexcodec
    unidecode
    whoosh
    pycountry>=18.12.8
    termcolor
    newick>=0.9.2
    markdown
    requests
    nameparser
    linglit>=0.3
    cldfzenodo
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
pyglottolog =
    data/*

[options.entry_points]
console_scripts =
    glottolog = pyglottolog.__main__:main
    glottolog-admin = pyglottolog.__main__:admin_main

[options.extras_require]
geo =
    shapely
    pyproj
dev =
    tox
    flake8
    wheel>=0.36
    twine
    build
test =
    pytest>=5
    pytest-mock
    requests-mock
    pytest-cov
    coverage>=4.2
    shapely
    pyproj
    python-levenshtein
docs =
    sphinx
    sphinx-autodoc-typehints
    sphinx-rtd-theme

[bdist_wheel]
universal = 1

[tool:pytest]
testpaths =
  tests
addopts =
  --doctest-modules
  --cov

[coverage:run]
source =
    pyglottolog
    tests
branch = false
omit =
    src/pyglottolog/links/endangeredlanguages.py

[coverage:report]
show_missing = true
skip_covered = true

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301
max-line-length = 100
exclude = .tox

[tox:tox]
#envlist = py37, py38, py39, py310, py311
envlist = py311
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
